syntax = "proto3"; //컴파일러가 사용할 문법
option java_multiple_files=true; //세팅 오버라이드=개개의 파일로 생성됨
package org.example;//생성된 자바 클래스들에서 사용하길 원하는 패키지 명시

//build 폴더 삭제?
//./gradlew build
//gradle bulid

//기본
message Request{
  string token=1;
  string type=2;
  string payload=3;
}
message ResponseList{
  string type=1;
  repeated string Response=2;
}
message Response{
  string message=1;
}

//로그인
message StudentCertRequest{
  string id=1;
  string pw=2;
}

//학생
message Student{
  string studentId=1;
  string name=2;
  string department=3;
  repeated string courseList=4;
  string id=5;
  string pw=6;
  string token=7;
}
message Course{
  string id=1;
  string professor=2;
  string className=3;
  repeated string preClass=4;
  string token=5;
}

//서비스 협약Contract 정의
service DataService{
  rpc login(StudentCertRequest) returns(Response);
}
service StudentService{
  rpc getStudentList(Request) returns(ResponseList);
  rpc addStudent(Student) returns(Response);
  rpc deleteStudent(Request) returns(Response);
}
service CourseService{
  rpc getCourseList(Request) returns(ResponseList);
  rpc addCourse(Course) returns(Response);
  rpc deleteCourse(Request) returns(Response);
}
service RegistrationService{
  rpc registration(Request) returns(Response);
}